# py_dcop

./: README.md  requirements.txt  todo.md
data/: 2-constraint.ccg  2-constraint.dimacs  3-constraint.json  50.dimacs  500.dimacs  binary.json  binary.out  data_process_old.ipynb  grid_5_1.ccg  grid_5_1.json  grid_5_1.wcsp  grid_5_1.xml  mytest.py
src/: py_dcop.py  py_dcop2.py
src/algorithms/: algorithm.py  ccg.ipynb  ccg_centralized.py  ccg_dsa.py  ccg_maxsum.py  dsa.py  lp_solver.py  max_sum.py  rand.py
src/core/: agent.py  agent_state.py  constraint.py  dcop_generator.py  dcop_instance.py  variable.py
src/scripts/: commons.py  dcop_gen_fednet.py  dcop_gen_grid.py  dcop_gen_rand.py  dcop_gen_scalefree.py  dcop_instance.py  exe_ccg_grid.sh  exe_ccg_rand.sh  exe_ccg_sf.sh  generate.sh  network_gen.ipynb  process_results.py  process_results_rand4.py  process_results_rand8.py  run_grid.sh  run_rand.sh  run_rand_dense.sh  run_rand_sparse.sh  run_sf.sh
src/utils/: ccg_utils.py  data.py  stats_collector.py  utils.py
third_parties/wcsp/: CMakeLists.txt  README
third_parties/wcsp/doc/: Doxyfile  README  main.dox  refs.bib
third_parties/wcsp/scripts/: convert-uai-to-wcsp.py  convert-wcsp-to-wmsat.py  gen-random-wcsp.py
third_parties/wcsp/src/: CMakeLists.txt  ConstraintCompositeGraph.h  Kernelizer.h  KernelizerLinearProgramming.h  LinearProgramSolver.cpp  LinearProgramSolver.h  LinearProgramSolverGurobi.cpp  LinearProgramSolverGurobi.h  MWVCSolver.h  MWVCSolverLinearProgramming.h  MWVCSolverMessagePassing.h  RunningTime.h  WCSPInstance.h  global.h  main.cpp
third_parties/wcsp/tests/: 2-constraint-non-boolean.dimacs  2-constraint-non-boolean.dimacs.sol  3-constraint-non-boolean.dimacs  3-constraint-non-boolean.uai  3-constraint-non-boolean.uai.sol  3-constraint.dimacs  3-constraint.out  binary.dimacs  binary.json
